<resources>
    <string name="app_name">SCP Foundation RU On/Offline</string>
    <string name="drawer_item_1">Об организации</string>
    <string name="drawer_item_2">Новости</string>
    <string name="drawer_item_3">Статьи по рейтингу</string>
    <string name="drawer_item_4">Новые статьи</string>
    <string name="drawer_item_5">Случайная статья</string>
    <string name="drawer_item_6">Объекты I</string>
    <string name="drawer_item_7">Объекты II</string>
    <string name="drawer_item_8">Объекты III</string>
    <string name="drawer_item_9">Объекты RU</string>
    <string name="drawer_item_10">Материалы</string>
    <string name="drawer_item_11">Рассказы</string>
    <string name="drawer_item_12">Избранное</string>
    <string name="drawer_item_13">Статьи Offline</string>
    <string name="drawer_item_14">Галерея</string>
    <string name="drawer_item_15">Поиск</string>
    <string name="drawer_item_objects4">Объекты IV</string>
    <string name="enter">Войти</string>
    <string name="settings">Настройки</string>
    <string name="night_mode">Ночной режим</string>
    <string name="text_size">Размер текста</string>
    <string name="in_apps">Отключить рекламу</string>
    <string name="day_mode">Дневной режим</string>
    <string name="unsupported_link">Эта ссылка не поддерживается</string>
    <string name="share">Поделиться</string>
    <string name="open_with">В браузер</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="share_link_text">%1$s\n\nОтправлено с помощью приложения \"SCP Foundation\"\nhttps://play.google.com/store/apps/details?id=%2$s</string>
    <string name="share_choser_text">Поделиться через…</string>
    <string name="browser_choser_text">Открыть с помощью…</string>
    <string name="favorites_add">Добавить в избранное</string>
    <string name="favorites_remove">Удалить из избранного</string>
    <string name="text_size_article">Размер текста в статьях</string>
    <string name="text_size_lists">Размер текста в списках</string>
    <string name="text_size_dialog_title">Настройки размера текста</string>
    <string name="close">Закрыть</string>
    <string name="delete">Удалить</string>
    <string name="download_all">Скачать всё</string>
    <string name="search">Поиск</string>
    <string name="about_org">Об организации</string>
    <string name="news">Новости</string>
    <string name="stories">Рассказы</string>
    <string name="scrollAwareFABBehavior">ru.kuchanov.scp2.ui.util.ScrollAwareFABBehavior</string>
    <string name="search_hint">Введите запрос</string>
    <string name="error_no_search_results">По вашему запросу ничего не найдено</string>
    <string name="start_download">Статьи нет в базе данных. Начинаю загрузку</string>
    <string name="downlad_art_list">Загрузка списка статей</string>
    <string name="download_all_title">Что скачать?</string>
    <string name="download">Скачать</string>
    <string name="cancel">Отмена</string>
    <string name="stop_download">Остановить загрузку</string>
    <string name="download_objects_title">Загрузка объектов</string>
    <string name="error_notification_title">Ошибка</string>
    <string name="error_notification_objects_list_download_content">Не удалось скачать список объектов</string>
    <string name="download_complete_title">Загрузка завершена</string>
    <string name="download_complete_title_content">Загружено %1$d из %2$d. Ошибок: %3$d</string>
    <string name="download_progress_content">Загружено %1$d/%2$d. Ошибок: %3$d</string>
    <string name="error_notification_recent_list_download_content">Не удалось загрузить список статей</string>
    <string name="notification_recent_list_title">Загрузка списка статей</string>
    <string name="download_recent_title">Загрузка статей</string>
    <string name="settings_notif_on">Уведомления о новых статьях</string>
    <string name="settings_notif_led_on">LED индикатор</string>
    <string name="settings_notif_vibrate_on">Вибрация</string>
    <string name="settings_notif_sound_on">Звук уведомления</string>
    <string name="settings_notification">Настройки уведомлений</string>
    <string name="dialog_title_subscriptions">Отключение рекламы, автоматическая облачная синхронизация и атмосферные шрифты</string>
    <string name="current_subscription">Ваша текущая подписка</string>
    <string name="no_subscriptions">Пусто</string>
    <string name="refresh">Обновить</string>
    <string name="i_accept">Я согласен</string>
    <string name="error_read_licence">Не удалось открыть файл лицензии</string>
    <string name="new_version_features">Новая версия</string>
    <string name="hurray">Ура!</string>
    <string name="in_progress">В разработке</string>
    <string name="settings_design">Внешний вид</string>
    <string name="settings_design_list_new">Новый дизайн в списках</string>
    <string name="dialog_random_page_title">Подключаюсь к фонду</string>
    <string name="dialog_random_page_message">Проверяю уровень допуска</string>
    <string name="remove_ads">Отключить рекламу?</string>
    <string name="yes_bliad">Да!</string>
    <string name="app_info">О приложении</string>
    <string name="remove_ads_for_free">Отключить рекламу бесплатно!</string>
    <string name="ads_reward_gained">Ура! Никакой рекламы на %d часа!</string>
    <string name="wait">Подождите…</string>
    <string name="dialog_download">Загрузка</string>
    <string name="ads_reward_error_loading">Не удалось загрузить. Пробуйте ещё раз…</string>
    <string name="ads_reward_description_title">Инструкция</string>
    <string name="ads_reward_description_content">Мы покажем вам видео и, после просмотра, временно отключим рекламу. Вы можете отключать её сколько угодно раз!</string>
    <string name="ads_reward_ok">Всё понятно!</string>
    <string name="settings_design_list_type">Дизайн статьи в списке</string>
    <string name="rating">Рейтинг %d</string>
    <string name="yes_sir">Так точно!</string>
    <string name="reward_not_loaded_yet">Ещё не загружено. Попробуйте ещё раз</string>
    <string name="settings_design_font">Шрифт</string>
    <string name="login_advantages">Внимание персонал! Авторизация не обязательна, но она нужна для облачной синхронизации избранных статей и статуса прочитанности оных. Также она позволяет участвовать в рейтинге агентов. Дальнейшие инструкции вы можете получить у руководителя зоны содержания.</string>
    <string name="login_advantages_title">Зачем авторизация?</string>
    <string name="login_greetings">Добро пожаловать, агент %s</string>
    <string name="error_login_no_email">Невозможно авторизоваться без информации о e-mail</string>
    <string name="access_level">3 уровень доступа (секретно)</string>
    <string name="materials">Материалы</string>
    <string name="only_premium">Только для подписавшихся</string>
    <string name="activate">Активировать</string>
    <string name="info">Информация</string>
    <string name="subs_info">В дополнительный функционал входит отключение рекламы, все шрифты без ограничения, умножение всех получаемых вами очков на 3, а также облачная синхронизация избранного и прочитанного. И самое главное - подписавшись, вы сильно промотивируете разработчиков всё быстрее и быстрее добавлять фичи и фиксить баги!</string>
    <string-array name="download_types">
        <item>Объекты I</item>
        <item>Объекты II</item>
        <item>Объекты III</item>
        <item>Объекты RU</item>

        <item>Протоколы экспериментов</item>
        <item>Отчёты об инцидентах</item>
        <item>Интервью с очевидцами</item>
        <item>Шуточные SCP</item>
        <item>Архивные SCP</item>
        <item>Прочие материалы</item>

        <item>Все</item>
    </string-array>
    <string-array name="fag_items">
        <item>Авторизация</item>
        <item>Облачная синхронизация</item>
        <item>Система рейтинга</item>
    </string-array>
    <string-array name="fag_items_content">
        <item>1. Авторизоваться можно в левом выдвижном меню, сверху, кнопка \"Войти\".\n
        2. Вход через соц.сети требует указанного в соц.сети e-mail, т.к. он используется как ID в БД сервера.\n
        3. Авторизация нужна для сохранения прочитанности и избранности статей в облако и для участия в рейтинге агентов.\n</item>
        <item>1. Работает только для авторизованных агентов.\n
        2. Требует подключения к интернету.\n
        3. Работает автоматически для агентов, имеющих подписку.\n
        4. Для экономных агентов требует ручной синхронизации. См. \"Настройки\".\n
        5. В облако сохраняется статус статьи - прочитанна ли она и добавлена ли в избранное.\n
        6. При очистке данных приложения/выходе из аккаунта все несинхронизированные данные будут потеряны.\n</item>
        <item>1. Работает только для авторизованных агентов.\n
        2. Требует подключения к интернету.\n
        3. Работает автоматически для агентов, имеющих подписку.\n
        4. Для экономных агентов требует ручной синхронизации. См. "Настройки"\n
        5. Очки начисляются за: добавление статей в избранное, прочтение оных, установку приложений, вступление в группы Вконтакте, просмотр рекламы, покупки в приложении. В дальнейшем список будет дополнен\n
        6. Ко всем очкам применяются модификаторы - за подписку и нахождение в группе приложения во Вконтакте все получаемые очки будут увеличены\n
        7. При очистке данных приложения/выходе из аккаунта все несинхронизированные данные будут потеряны.\n
        8. По мере получения очков ваш уровень допуск будет расти. Внимание! Уровень допуска не даёт никаких дополнительных привелегий - это просто надпись под вашей аватаркой.\n
        9. Прогресс до получения следующего уровня показан зелёной полосой вокруг аватарки.\n
        10. Количество очков до следующего уровня показывается при нажатии на аватарку.\n
        11. Таблица рейтинга агентов показывается при нажатии на аватарку. Она обновляется раз в несколько минут. Обычно 5 минут.</item>
    </string-array>
    <string name="market_url" translatable="false">market://details?id=%s</string>
    <string name="free">Бесплатно</string>
    <string name="dialog_free_ads_disable_title">Отлючение рекламы</string>
    <string name="start_market_error">Не удалось запустить PlayMarket</string>
    <string name="thanks_for_supporting_us">Разработчики благодарны за вашу поддержку!</string>
    <string name="invitation_message">Смотри какое крутое приложение я нашёл!</string>
    <string name="invitation_cta">Прочти секретные документы!</string>
    <string name="invitation_title">Секретные материалы фонда SCP!</string>
    <string name="invite_friends">Пригласи 5 друзей в приложение!</string>
    <string name="watch_video_to_disable_ads">Посмотри видео для отключения рекламы на %d часа</string>
    <string name="app_install_ads_disable_title">Установи другие наши приложения для отключения рекламы на %d часа!</string>
    <string name="vk_group_join_ads_disable_title">Вступи в группу ВК для отключения рекламы на %d часа!</string>
    <string name="need_vk_group_access">Требуется разрешение на доступ к группам. Авторизуйтесь заново.</string>
    <string name="gallery">Галерея</string>
    <string name="error_login_firebase_connection">Ошибка логина. Попробуйте ещё раз. %s</string>
    <string name="on_user_logined">Приветствуем, агент %s</string>
    <string name="login_in_progress_custom_token">Запрашиваю пароль на сервере Фонда</string>
    <string name="error_while_sync">Не удалось сохранить статью в облаке</string>
    <string name="sync_fav_success">Статья синхронизирована</string>
    <string name="app_cracked">Зарегистрирована попытка взлома базы данных Фонда. Карантинный режим активирован.</string>
    <string name="deleting_data">Удаляю секретные данные…</string>
    <string name="auto_sync_disabled">Автоматическая синхронизация отключена</string>
    <string name="turn_on">Включить</string>
    <string name="enable_auto_sync">Активировать автоматическую синхронизацию</string>
</resources>