<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_applications_white_48dp"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/night_mode_item"
        android:title="@string/night_mode"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/text_size"
        android:icon="@drawable/ic_text_fields_white_36dp"
        android:title="@string/text_size"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/subscribe"
        android:icon="@drawable/ic_monetization_on_white_48dp"
        android:title="@string/in_apps"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menuItemShare"
        android:icon="?iconShare"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menuItemBrowser"
        android:icon="@drawable/ic_open_in_browser_blue_grey_50_48dp"
        android:title="@string/open_with"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menuItemFavorite"
        android:icon="@drawable/ic_star_border_white_48dp"
        android:title="@string/add_to_favorites"
        app:showAsAction="never"
        />
</menu>