<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin"
        android:text="@string/dialog_title_subscriptions"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ProgressBar
            android:id="@+id/progressCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTint="?newArticlesTextColor"
            android:indeterminateTintMode="src_in"
            android:paddingBottom="@dimen/defaultMargin"
            android:visibility="visible"
            tools:targetApi="lollipop"
            />

        <TextView
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:padding="@dimen/defaultMargin"
            android:text="@string/refresh"
            android:textSize="21sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/currentSubscriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/defaultMarginSmall"
                android:paddingLeft="@dimen/defaultMargin"
                android:text="@string/current_subscription"
                android:textSize="19sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"
                />

            <TextView
                android:id="@+id/currentSubscriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/defaultMarginSmall"
                android:paddingLeft="@dimen/defaultMargin"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry"
                tools:text="Подписка за 30р"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>